# Velium-

./: .env.example  .gitignore  API.md  DECISIONS.md  PROMPTS.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/gateway-rust/: Cargo.toml  Dockerfile
backend/gateway-rust/migrations/: 0001_create_generations.sql
backend/gateway-rust/src/: main.rs
backend/llm-python/: Dockerfile  requirements.txt
backend/llm-python/app/: main.py
backend/llm-python/tests/: test_generation.py
backend/renderer-node/: Dockerfile  package-lock.json  package.json
backend/renderer-node/src/: index.ts  render.ts
backend/renderer-node/tests/: render.test.ts
common/schemas/: generate-request.schema.json
common/types/: generation.ts
docs/adr/: 001-backend-language.md  002-renderer-exception.md  003-data-platform.md  004-frontend-architecture.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
infra/nginx/: default.conf
